tighten automated inclusion

--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -1,7 +1,11 @@
 <%
 /*
 
-XXX NEED TO EXPLAIN
+It USED to be that almost all the pages in the learning area used this macro
+to generate a sidebar. Since June 2021, most pages get their sidebar from the
+related-content dynamic sidebar. But to avoid have to worry about the exact
+migration of having to remove this macro from all the content, we let this
+file stick around as an empty stub.
 
 */
 
