--- a/kumascript/macros/MDNSidebar.ejs
+++ b/kumascript/macros/MDNSidebar.ejs
@@ -1,429 +1,15 @@
 <%
+/*
 
-const locale = env.locale;
+It USED to be that almost all the pages in the learning area used this macro
+to generate a sidebar. Since June 2021, most pages get their sidebar from the
+related-content dynamic sidebar. But to avoid have to worry about the exact
+migration of having to remove this macro from all the content, we let this
+file stick around as an empty stub.
 
-const baseURL = `/${locale}/docs/MDN/`;
+*/
 
-const text = mdn.localStringMap({
-  "en-US": {
-    "About_MDN": "About MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promote MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "Get started on MDN",
-    "Contributing_to_MDN": "Contributing to MDN",
-      "Other_things_you_can_do": "Things you can do",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "ar": {
-    "About_MDN": "حول شبكة مطوري موزيل",
-      "MDN_guide_for_readers": "دليل قراء الشبكة",
-      "Promote_MDN": "انشر الشبكة",
-      "Send_feedback_about_MDN": "ارسل تعليقاتك حول الشبكة",
-    "Get_started_on_MDN": "ابدأ مع شبكة مطوري موزيل",
-    "Contributing_to_MDN": "ساعد على تحسين شبكة مطوري موزيلا",
-      "Other_things_you_can_do": "أشياء يمكنك القيام بها",
-      "Localizing_MDN": "ترجم الشبكة إلى لغتك",
-      "MDN_editor_UI": "واجهة محرر الشبكة",
-      "Tools_for_power_users": "أدوات لمساعدة المستخدمين",
-      "Guidelines": "دلائل إرشادية",
-      "Work_processes": "سير العمل",
-      "Content_structures": "هياكل المحتوى",
-    "Kuma_the_MDN_wiki_platform": "برمجية كوما: برمجيّة الموسوعة الذي تعمل عليها الشبكة",
-  },
-  "bn-BD": {
-    "About_MDN": "About MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promote MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "মজিলা ডেভেলপার নেটওয়ার্কের সাথে পরিচিত হওয়া",
-    "Contributing_to_MDN": "MDN এ অবদান রাখা",
-      "Other_things_you_can_do": "Things you can do",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "ca": {
-    "About_MDN": "Sobre MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promoure MDN",
-      "Send_feedback_about_MDN": "Enviar comentaris sobre MDN",
-    "Get_started_on_MDN": "Començar en MDN",
-    "Contributing_to_MDN": "Ajuda a millora MDN",
-      "Other_things_you_can_do": "Coses que pot fer",
-      "Localizing_MDN": "Localització de MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Eines per usuaris avançats",
-      "Guidelines": "Guies",
-      "Work_processes": "Processos de treball",
-      "Content_structures": "Estructures de contingut",
-    "Kuma_the_MDN_wiki_platform": "Kuma: plataforma wiki MDN",
-  },
-  "de": {
-    "About_MDN": "Über MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Fördere MDN",
-      "Send_feedback_about_MDN": "Bewerte MDN",
-    "Get_started_on_MDN": "Erste Schritte auf MDN",
-    "Contributing_to_MDN": "Beitragen zu MDN",
-      "Other_things_you_can_do": "How-to Leitfäden",
-      "Localizing_MDN": "Lokalisieren von MDN",
-      "MDN_editor_UI": "Editoren Anleitung",
-      "Tools_for_power_users": "Werkzeuge für Fortgeschrittene",
-      "Guidelines": "Richtlinien",
-      "Work_processes": "Arbeitsweisen",
-      "Content_structures": "Inhalststruktur",
-    "Kuma_the_MDN_wiki_platform": "Kuma: MDN's Wikipedia Platform",
-  },
-  "es": {
-    "About_MDN": "Acerca de MDN",
-      "MDN_guide_for_readers": "MDN reader's guide(inglés)",
-      "Promote_MDN": "Promueve MDN",
-      "Send_feedback_about_MDN": "Enviar feedback sobre MDN",
-    "Get_started_on_MDN": "Primeros pasos en MDN",
-    "Contributing_to_MDN": "Ayudar a la MDN",
-      "Other_things_you_can_do": "Cosas que puedes hacer",
-      "Localizing_MDN": "Adaptar/traducir MDN",
-      "MDN_editor_UI": "Interfaz del editor de MDN",
-      "Tools_for_power_users": "Herramientas para usuarios avanzados",
-      "Guidelines": "Guías de preferencias",
-      "Work_processes": "Procesos de documentacion",
-      "Content_structures": "Estructura del contenido",
-    "Kuma_the_MDN_wiki_platform": "Kuma: La wiki de la MDN",
-  },
-  "fr": {
-    "About_MDN": "À propos",
-      "MDN_guide_for_readers": "Aides à la lecture de MDN",
-      "Promote_MDN": "Promotion de MDN",
-      "Send_feedback_about_MDN": "Faire un retour sur MDN",
-    "Get_started_on_MDN": "Débuter sur MDN",
-    "Contributing_to_MDN": "Contribuer au MDN",
-      "Other_things_you_can_do": "Guides \"Comment faire\"",
-      "Localizing_MDN": "Localiser MDN",
-      "MDN_editor_UI": "Interface de l'éditeur de MDN",
-      "Tools_for_power_users": "Outils pour les utilisateurs avancés",
-      "Guidelines": "Guides du style et du contenu MDN",
-      "Work_processes": "Processus de documentation",
-      "Content_structures": "Structures des contenus",
-    "Kuma_the_MDN_wiki_platform": "Kuma, la plateforme soutenant le wiki MDN",
-  },
-  "hi-IN": {
-    "About_MDN": "MDN के बारे में",
-      "MDN_guide_for_readers": "MDN पाठक की मार्गदर्शिका",
-      "Promote_MDN": "MDN का प्रचार करें",
-      "Send_feedback_about_MDN": "MDN के बारे में प्रतिक्रिया भेजें",
-    "Get_started_on_MDN": "MDN पर शुरू करें",
-    "Contributing_to_MDN": "MDN में सुधार करने में मदद करें",
-      "Other_things_you_can_do": "चीज़ें जो आप कर सकते हों",
-      "Localizing_MDN": "MDN का स्थानीयकरण करें ",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Power उपयोगकर्ताओं के लिए उपकरण",
-      "Guidelines": "दिशा निर्देश",
-      "Work_processes": "कार्य प्रक्रियाएं",
-      "Content_structures": "सामग्री संरचनाएं",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "hu": {
-    "About_MDN": "Az MDN-ről",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Az MDN népszerűsítése",
-      "Send_feedback_about_MDN": "Visszajelzés küldése az MDN-ről",
-    "Get_started_on_MDN": "Ismerkedés az MDN-nel",
-    "Contributing_to_MDN": "Segítsen az MDN tökéletesítésében",
-      "Other_things_you_can_do": "Dolgok, amiket megtehet",
-      "Localizing_MDN": "Az MDN honosítása",
-      "MDN_editor_UI": "MDN szerkesztőfelület",
-      "Tools_for_power_users": "Eszközök tapasztalt felhasználóknak",
-      "Guidelines": "Irányelvek",
-      "Work_processes": "Munkafolyamatok",
-      "Content_structures": "Tartalom felépítése",
-    "Kuma_the_MDN_wiki_platform": "Kuma: az MDN wiki platformja",
-  },
-  "id": {
-    "About_MDN": "Tentang MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promosikan MDN",
-      "Send_feedback_about_MDN": "Kirim feedback tentang MDN",
-    "Get_started_on_MDN": "Memulai di MDN",
-    "Contributing_to_MDN": "Bantu kembangkan MDN",
-      "Other_things_you_can_do": "Hal yang anda bisa lakukan",
-      "Localizing_MDN": "Melokalisasi MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Paduan",
-      "Work_processes": "Work processes",
-      "Content_structures": "Struktur konten",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "it": {
-    "About_MDN": "Informazioni su MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promuovi MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "Primi passi su MDN",
-    "Contributing_to_MDN": "Contribuire a MDN",
-      "Other_things_you_can_do": "Guide come fare per",
-      "Localizing_MDN": "Localizzazione di MDN",
-      "MDN_editor_UI": "Guida all'editor di MDN",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "ja": {
-    "About_MDN": "MDN について",
-      "MDN_guide_for_readers": "MDN 読者のガイド",
-      "Promote_MDN": "MDN を宣伝する",
-      "Send_feedback_about_MDN": "MDNについてのフィードバックを送る",
-    "Get_started_on_MDN": "MDN を始めよう",
-    "Contributing_to_MDN": "MDN の改善に貢献する",
-      "Other_things_you_can_do": "あなたにできること",
-      "Localizing_MDN": "MDN でのローカライズ",
-      "MDN_editor_UI": "MDNエディターガイド",
-      "Tools_for_power_users": "パワーユーザーのためのツール",
-      "Guidelines": "Guidelines",
-      "Work_processes": "作業のプロセス",
-      "Content_structures": "文書の構造",
-    "Kuma_the_MDN_wiki_platform": "Kuma: MDN の Wiki プラットフォーム",
-  },
-  "ko": {
-    "About_MDN": "MDN이란",
-      "MDN_guide_for_readers": "MDN 독자를 위한 가이드",
-      "Promote_MDN": "MDN 홍보하기",
-      "Send_feedback_about_MDN": "MDN에 피드백을 보내주세요!",
-    "Get_started_on_MDN": "MDN 시작하기",
-    "Contributing_to_MDN": "MDN 참여하기",
-      "Other_things_you_can_do": "MDN web docs 사용방법",
-      "Localizing_MDN": "MDN 지역화 하기",
-      "MDN_editor_UI": "MDN 에디터 UI 가이드",
-      "Tools_for_power_users": "파워 유저를 위한 도구들",
-      "Guidelines": "가이드라인",
-      "Work_processes": "작업 진행 과정",
-      "Content_structures": "문서 구조",
-    "Kuma_the_MDN_wiki_platform": "Kuma: MDN 위키 플랫폼",
-  },
-  "ml": {
-    "About_MDN": "എംഡിഎനിനെ കുറിച്ച്",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promote MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "Get started on MDN",
-    "Contributing_to_MDN": "Help improve MDN",
-      "Other_things_you_can_do": "Things you can do",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "ms": {
-    "About_MDN": "Perihal MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promote MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "Get started on MDN",
-    "Contributing_to_MDN": "Help improve MDN",
-      "Other_things_you_can_do": "Things you can do",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "nl": {
-    "About_MDN": "Over MDN",
-      "MDN_guide_for_readers": "Lezersgids voor MDN",
-      "Promote_MDN": "MDN promoten",
-      "Send_feedback_about_MDN": "Feedback versturen over MDN",
-    "Get_started_on_MDN": "Beginnen op MDN",
-    "Contributing_to_MDN": "Bijdragen aan MDN",
-      "Other_things_you_can_do": "Dingen die u kunt doen",
-      "Localizing_MDN": "MDN lokaliseren",
-      "MDN_editor_UI": "Editor-UI van MDN",
-      "Tools_for_power_users": "Hulpmiddelen voor hoofdgebruikers",
-      "Guidelines": "Richtlijnen",
-      "Work_processes": "Werkprocessen",
-      "Content_structures": "Inhoudsstructuren",
-    "Kuma_the_MDN_wiki_platform": "Kuma: Het wikiplatform van MDN",
-  },
-  "pt-BR": {
-    "About_MDN": "Sobre a MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promover a MDN",
-      "Send_feedback_about_MDN": "Enviar feedback sobre a MDN",
-    "Get_started_on_MDN": "Primeiros passos na MDN",
-    "Contributing_to_MDN": "Ajudar a melhorar a MDN",
-      "Other_things_you_can_do": "O que pode fazer",
-      "Localizing_MDN": "Localizando a MDN",
-      "MDN_editor_UI": "Editor UI MDN",
-      "Tools_for_power_users": "Ferramentas para usuários avançados",
-      "Guidelines": "Diretrizes",
-      "Work_processes": "Processos de trabalho",
-      "Content_structures": "Estruturas de conteúdo",
-    "Kuma_the_MDN_wiki_platform": "Kuma: plataforma wiki da MDN",
-  },
-  "pt-PT": {
-    "About_MDN": "Sobre a MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promote MDN",
-      "Send_feedback_about_MDN": "Enviar opinião sobre a MDN",
-    "Get_started_on_MDN": "Iniciação na MDN",
-    "Contributing_to_MDN": "Contribuir para a MDN",
-      "Other_things_you_can_do": "Guias de Como...",
-      "Localizing_MDN": "Localizar MDN",
-      "MDN_editor_UI": "Guia para o editor da IU da MDN",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Linhas Diretrizes",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: Plataforma wiki da MDN",
-  },
-  "ro": {
-    "About_MDN": "Despre MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promote MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "Noțiuni de bază despre MDN",
-    "Contributing_to_MDN": "Help improve MDN",
-      "Other_things_you_can_do": "Things you can do",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: platforma wiki a MDN-ului",
-  },
-  "ru": {
-    "About_MDN": "О MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Продвижение MDN",
-      "Send_feedback_about_MDN": "Оставить отзыв о MDN",
-    "Get_started_on_MDN": "MDN - Быстрый старт!",
-    "Contributing_to_MDN": "Сотрудничество с MDN",
-      "Other_things_you_can_do": "Руководства \"Как сделать\"",
-      "Localizing_MDN": "Локализация MDN",
-      "MDN_editor_UI": "Руководство редактора MDN",
-      "Tools_for_power_users": "Инструменты для активных пользователей",
-      "Guidelines": "Руководства",
-      "Work_processes": "Рабочие процессы",
-      "Content_structures": "Структуры документов",
-    "Kuma_the_MDN_wiki_platform": "Kuma: вики-платформа MDN",
-  },
-  "sv-SE": {
-    "About_MDN": "Om MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Marknadsför MDN",
-      "Send_feedback_about_MDN": "Skicka in feedback om MDN",
-    "Get_started_on_MDN": "Get started on MDN",
-    "Contributing_to_MDN": "Hjälp till att förbättra MDN",
-      "Other_things_you_can_do": "Saker som du kan göra",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Riktlinjer",
-      "Work_processes": "Arbetsprocedurer",
-      "Content_structures": "Innehållsstrukturer",
-    "Kuma_the_MDN_wiki_platform": "Kuma: MDN's wiki-plattform",
-  },
-  "uk": {
-    "About_MDN": "Про MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Поширити MDN",
-      "Send_feedback_about_MDN": "Залишити відгук про MDN",
-    "Get_started_on_MDN": "Швидкий старт на MDN",
-    "Contributing_to_MDN": "Допомогти вдосконалити MDN",
-      "Other_things_you_can_do": "Що можна зробити",
-      "Localizing_MDN": "Переклад MDN",
-      "MDN_editor_UI": "Посібник редактора MDN",
-      "Tools_for_power_users": "Інструменти для просунутих користувачів",
-      "Guidelines": "Посібники",
-      "Work_processes": "Робочі процеси",
-      "Content_structures": "Структури документів",
-    "Kuma_the_MDN_wiki_platform": "Kuma: Вікі-платформа MDN",
-  },
-  "vi": {
-    "About_MDN": "Giới Thiệu Về MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "Promote MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "Get started on MDN",
-    "Contributing_to_MDN": "Help improve MDN",
-      "Other_things_you_can_do": "Things you can do",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "Hướng dẫn trình soạn thảo MDN",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: the MDN wiki platform",
-  },
-  "zh-CN": {
-    "About_MDN": "关于 MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "推广MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "初识MDN",
-    "Contributing_to_MDN": "为 MDN 做贡献",
-      "Other_things_you_can_do": "MDN 使用指南",
-      "Localizing_MDN": "MDN 本地化",
-      "MDN_editor_UI": "MDN 编辑指南",
-      "Tools_for_power_users": "MDN 工具",
-      "Guidelines": "Guidelines",
-      "Work_processes": "Work processes",
-      "Content_structures": "文档结构",
-    "Kuma_the_MDN_wiki_platform": "Kuma: MDN 的 wiki 平台",
-  },
-  "zh-TW": {
-    "About_MDN": "關於 MDN",
-      "MDN_guide_for_readers": "MDN guide for readers",
-      "Promote_MDN": "推廣 MDN",
-      "Send_feedback_about_MDN": "Send feedback about MDN",
-    "Get_started_on_MDN": "開始入門 MDN",
-    "Contributing_to_MDN": "貢獻 MDN",
-      "Other_things_you_can_do": "Things you can do",
-      "Localizing_MDN": "Localizing MDN",
-      "MDN_editor_UI": "MDN editor UI",
-      "Tools_for_power_users": "Tools for power users",
-      "Guidelines": "MDN 內容與風格指南",
-      "Work_processes": "Work processes",
-      "Content_structures": "Content structures",
-    "Kuma_the_MDN_wiki_platform": "Kuma: MDN 的維基平台",
-  }
-});
-
+var output = "";
 %>
 
-<section class="Quick_links" id="Quick_Links">
-  <ol>
-    <li><a href="<%=baseURL%>About"><%=text['About_MDN']%></a></li>
-    <li class="toggle">
-        <details>
-            <summary><%=text['Contributing_to_MDN']%></summary>
-            <ol>
-                <li><a href="<%=baseURL%>Contribute/Getting_started"><%=text['Get_started_on_MDN']%></a></li>
-                <li><a href="<%=baseURL%>Contribute"><%=text['Contributing_to_MDN']%></a></li>
-                <li><a href="<%=baseURL%>Contribute/Howto"><%=text['Other_things_you_can_do']%></a></li>
-                <li><a href="<%=baseURL%>Contribute/Localize"><%=text['Localizing_MDN']%></a></li>
-                <li><a href="<%=baseURL%>Guidelines"><%=text['Guidelines']%></a></li>
-                <li><a href="<%=baseURL%>Structures"><%=text['Content_structures']%></a></li>
-             </ol>
-        </details>
-    </li>
-  </ol>
-</section>
+<%-output%>
