Add ability to render preview browsers (introduced in BCD 4.0.0)

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-supports.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-supports.scss
@@ -84,3 +84,7 @@ $bc-partial-support-cross: rgba(144, 99, 18, 0.2);
 .bc-supports-unknown {
   background-color: $neutral-550;
 }
+
+.bc-supports-preview {
+  background-color: $primary-500;
+}
