--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -67,7 +67,7 @@ a.new {
       }
     }
 
-    .user-message {
+    .copy-icon-message {
       background: $neutral-100;
       border-radius: $default-border-radius;
       color: $neutral-600;
