Fix vertical alignment for pseudo element in bc tables

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-browsers.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-browsers.scss
@@ -30,6 +30,7 @@
       content: "";
       display: inline-block;
       left: -28px;
+      top: 1.5px;
       position: absolute;
       transform: rotate(90deg);
     }
