Fix inconsistent placement of icons in sidebar

--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -58,9 +58,13 @@
   .icon-experimental,
   .icon-nonstandard {
     color: $primary-50;
+    float: left;
+    margin-top: 3px;
   }
 
   .icon-deprecated {
     color: $red-100;
+    float: left;
+    margin-top: 3px;
   }
 }
