Clarified error messages when no BCD is available

--- a/kumascript/macros/Compat.ejs
+++ b/kumascript/macros/Compat.ejs
@@ -36,7 +36,7 @@ if (!query) {
 }
 var depth = $1 || 1;
 var output = `<div class="bc-data" id="bcd:${query}" data-depth="${depth}">
-  If you're able to see this, something went wrong on this page.
+  If you're able to see this, no compatibility data could be found.
 </div>`;
 %>
 
