--- a/kumascript/macros/Specifications.ejs
+++ b/kumascript/macros/Specifications.ejs
@@ -18,7 +18,7 @@ if (!query) {
   throw new Error("No first query argument or 'browser-compat' front-matter value passed");
 }
 var output = `<div class="bc-specs" data-bcd-query="${query}">
-  If you're able to see this, something went wrong on this page.
+  If you're able to see this, no compatibility data could be found.
 </div>`;
 %>
 
