--- a/kumascript/macros/SectionOnPage.ejs
+++ b/kumascript/macros/SectionOnPage.ejs
@@ -26,7 +26,7 @@ let text = "";
 let page = await wiki.getPage($0);
 let title = kuma.htmlEscape(page.title);
 
-let commonLocalStrings = JSON.parse(await template("L10n:Common"));
+let commonLocalStrings = web.getJSONData("L10n-Common");
 let localize = mdn.getLocalString;
 
 if (!title || title == undefined || title == "undefined") {
