--- a/kumascript/macros/spec2.ejs
+++ b/kumascript/macros/spec2.ejs
@@ -2,7 +2,7 @@
 /* parameters: */
 /* $0 = name of specification */
 
-var specList = JSON.parse(await template('SpecData'));
+var specList = web.getJSONData("SpecData");
 
 var status = {};
 
