Change vertical-align to bottom for bc-legend atoms

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-legend.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-legend.scss
@@ -30,7 +30,7 @@
 
     dt {
       margin-right: math.div($base-spacing, 2);
-      vertical-align: middle;
+      vertical-align: bottom;
     }
   }
 
