Add bottom margin to properly space tap targets

--- a/client/src/document/organisms/metadata/index.scss
+++ b/client/src/document/organisms/metadata/index.scss
@@ -19,6 +19,10 @@
 
   .on-github {
     margin-bottom: $base-spacing;
+
+    ul li {
+      margin-bottom: 8px;
+    }
   }
 
   .last-modified-date {
