Increase size of tap targets for social icons in footer

--- a/client/src/ui/organisms/footer/index.scss
+++ b/client/src/ui/organisms/footer/index.scss
@@ -46,6 +46,11 @@
     li {
       display: inline-block;
       margin-right: 10px;
+
+      .social-icon {
+        padding-right: math.div($base-spacing, 4);
+        padding-left: math.div($base-spacing, 4);
+      }
     }
 
     ul {
