--- a/client/src/plus/bookmarks/index.scss
+++ b/client/src/plus/bookmarks/index.scss
@@ -1,5 +1,14 @@
 @import "~@mdn/minimalist/sass/vars/color-palette";
 
+@keyframes fadeOutNearly {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.1;
+  }
+}
+
 .plus {
   .bookmarks {
     h3 {
@@ -28,6 +37,11 @@
           }
         }
       }
+    }
+    div.bookmark.doomed {
+      // Hey Schalk! How do I get it to stay at 'opacity:0.1' after the animation
+      // has run for its 0.5s?
+      animation: fadeOutNearly 0.5s ease-out;
     }
 
     .notecard.unbookmark {
