--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -100,6 +100,8 @@ a.new {
 
   .example-good,
   .example-bad {
+    position: realtive;
+
     &::after {
       background-size: 24px;
       content: "";
