Updated and translated some articles titles
Перевёл и обновил несколько названий статей. Добавил в код новый блок названий статей. Это изменение часть работы над <a href="https://github.com/mdn/translated-content/issues/1352"> этой ишью </a>

--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -798,30 +798,35 @@ var text = mdn.localStringMap({
       'Introduction_to_HTML': 'Вступление в HTML',
         'Introduction_to_HTML_overview': 'Вступление в HTML',
         'Getting_started_with_HTML': 'Начало работы с HTML',
-        'Whats_in_the_head_metadata_in_HTML': 'Что в "шапке"? Метаданные в HTML',
-        'HTML_text_fundamentals': 'Тексты в HTML',
+        'Whats_in_the_head_metadata_in_HTML': 'Что внутри "head"? Метаданные в HTML',
+        'HTML_text_fundamentals': 'Основы редактирования текста в HTML',
         'Creating_hyperlinks': 'Создание гиперссылок',
         'Advanced_text_formatting': 'Продвинутое форматирование текста',
         'Document_and_website_structure': 'Структура документа и веб-сайта',
         'Debugging_HTML': 'Отладка HTML',
-        'Assessment_marking_up_a_letter': 'Задание: Выделение символа',
-        'Assessment_structuring_a_page_of_content': 'Задание: Структура страницы',
+        'Assessment_marking_up_a_letter': 'Задание: Разметка письма',
+        'Assessment_structuring_a_page_of_content': 'Задание: Структурируем страницу',
       'Multimedia_and_embedding': 'Мультимедиа и встраивание',
         'Multimedia_and_embedding_overview': 'Мультимедиа и встраивание',
         'Images_in_HTML': 'Изображения в HTML',
         'Video_and_audio_content': 'Видео и аудио контент',
         'Other_embedding_technologies': 'От object до iframe — другие технологии встраивания',
-        'Adding_vector_graphics_to_the_Web': 'Добавление векторный графики в Веб',
+        'Adding_vector_graphics_to_the_Web': 'Добавление векторный графики в веб-документ',
         'Responsive_images': 'Отзывчивые изображения',
         'Assessment_Mozilla_splash_page': 'Задание: Страница о Mozilla',
-    'CSS_styling_the_Web': 'CSS — стилизирование Веба',
-      'CSS_first_steps': 'CSS first steps',
-        'CSS_first_steps_overview': 'CSS first steps overview',
-        'What_is_CSS':  'What is CSS?',
-        'Getting_started_with_CSS': 'Getting started with CSS',
-        'How_CSS_is_structured': 'How CSS is structured',
-        'How_CSS_works': 'How CSS works',
-        'Using_your_new_knowledge': 'Using your new knowledge',
+      'HTML_tables' : 'HTML таблицы',
+        'HTML_tables_overview' : 'Обзор HTML таблиц',
+        'HTML_table_basics' : 'Основы HTML таблиц',
+        'HTML_table_advanced' : 'Продвинутые возможности и доступность HTML таблиц',
+        'Assessment_Structuring_planet_data' : 'Задание: Структурирование данных о планетах',
+    'CSS_styling_the_Web': 'CSS — стилизация Веба',
+      'CSS_first_steps': 'CSS первые шаги',
+        'CSS_first_steps_overview': 'Введение в CSS',
+        'What_is_CSS':  'Что такое CSS?',
+        'Getting_started_with_CSS': 'Начало работы с CSS',
+        'How_CSS_is_structured': 'Как структурирован CSS',
+        'How_CSS_works': 'Как работает CSS',
+        'Using_your_new_knowledge': 'Использование ваших новых знаний',
       'CSS_building_blocks': 'CSS building blocks',
         'CSS_building_blocks_overview': 'CSS building blocks overview',
         'Cascade_and_inheritance': 'Cascade and inheritance',
