--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -36,6 +36,10 @@ a.new {
 .main-page-content {
   padding: math.div($base-spacing, 2) $base-spacing $base-spacing;
 
+  figure {
+    margin-bottom: $base-spacing;
+  }
+
   ul li {
     margin-bottom: 8px;
   }
