remove `width` from inline styling of `iframe`

--- a/kumascript/macros/EmbedInteractiveExample.ejs
+++ b/kumascript/macros/EmbedInteractiveExample.ejs
@@ -32,4 +32,4 @@ if ($1) {
 }
 
 %>
-<iframe class="interactive" width="100%" height="<%= height %>" src="<%= url %>" title="MDN Web Docs Interactive Example"></iframe>
+<iframe class="interactive" height="<%= height %>" src="<%= url %>" title="MDN Web Docs Interactive Example"></iframe>
