--- a/kumascript/macros/JSFiddleEmbed.ejs
+++ b/kumascript/macros/JSFiddleEmbed.ejs
@@ -12,6 +12,6 @@ if (options.length != 0) {
     options += "/";
 }
 
-var s_result = '<p><iframe allowfullscreen="allowfullscreen" height="' + $2 + '" src="' + $0 + 'embedded/' + options + '" width="100%"></iframe></p>';
+var s_result = '<p><iframe allowfullscreen="allowfullscreen" height="' + $2 + '" src="' + $0 + 'embedded/' + options + '></iframe></p>';
 
 %><%- s_result %>
