remove class="new" and tidy SVGInfo.json

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -25,10 +25,7 @@
   }
 }
 
-/* page-not-created is the preferred class name, `new` is
-   here for backwards compatibility */
-a.page-not-created,
-a.new {
+a.page-not-created {
   color: $red-300;
   cursor: not-allowed;
 }
