--- a/kumascript/macros/HTTPSidebar.ejs
+++ b/kumascript/macros/HTTPSidebar.ejs
@@ -23,7 +23,7 @@ var text = mdn.localStringMap({
     'Identifying': 'Identifying resources on the Web',
     'DataURIs': 'Data URIs',
     'MIMETypes': 'Introduction to MIME types',
-    'ListMIMETypes': 'Incomplete list of MIME types',
+    'ListMIMETypes': 'Common MIME types',
     'WWWorNotWWW': 'Choosing between www and non-www URLs',
     'Messages': 'HTTP Messages',
     'Session': 'A typical HTTP session',
