add two deep dive article pages

--- a/client/src/ui/theme/buttons/index.scss
+++ b/client/src/ui/theme/buttons/index.scss
@@ -8,7 +8,7 @@ button,
   border: 0;
   border-radius: 0;
   cursor: pointer;
-  font-family: typography.$default-font-family;
+  font-family: typography.$metropolis-font-family;
   font-size: typography.$small-font-size;
   font-weight: normal;
   padding: math.div(layout.$base-spacing, 4) math.div(layout.$base-spacing, 1.5);
