--- a/client/src/ui/theme/index.scss
+++ b/client/src/ui/theme/index.scss
@@ -2,3 +2,5 @@
 @import "./buttons/index";
 @import "./color-palette/index";
 @import "./typography/index";
+@import "./code-examples/index";
+@import "./utils/index";
