--- a/client/src/ui/theme/typography/index.scss
+++ b/client/src/ui/theme/typography/index.scss
@@ -1,69 +1,24 @@
-@use "../color-palette/index" as palette;
+@use "./fonts";
 
-@font-face {
-  font-display: swap;
-  font-family: "Metropolis";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../../../assets/fonts/Metropolis-Bold.woff2") format("woff2"),
-    url("../../../assets/fonts/Metropolis-Bold.woff") format("woff");
-}
+$default-line-height: 1.5;
+$heading-line-height: 1.2;
 
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 300;
-  src: local(""),
-    url("../../../assets/fonts/inter-v3-latin-300.woff2") format("woff2"),
-    url("../../../assets/fonts/inter-v3-latin-300.woff") format("woff");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  src: local(""),
-    url("../../../assets/fonts/inter-v3-latin-regular.woff2") format("woff2"),
-    url("../../../assets/fonts/inter-v3-latin-regular.woff") format("woff");
-}
-
-@font-face {
-  font-display: swap;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  src: local(""),
-    url("../../../assets/fonts/inter-v3-latin-600.woff2") format("woff2"),
-    url("../../../assets/fonts/inter-v3-latin-600.woff") format("woff");
-}
-
-$default-font-family: "Metropolis", sans-serif;
-$heading-font-family: "Inter", sans-serif;
+$metropolis-font-family: "Metropolis", sans-serif;
+$inter-font-family: "Inter", sans-serif;
+$code-inline-font-family: consolas, "Liberation Mono", courier, monospace;
 
 $small-font-size: 0.9rem; /* 16px */
 
 h1,
 h2 {
-  font-family: $default-font-family;
+  font-family: $metropolis-font-family;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: $heading-line-height;
 }
 
 h3,
 h4,
 h5 {
-  font-family: $heading-font-family;
+  font-family: $inter-font-family;
   font-weight: bold;
-}
-
-.gradient-clip-text {
-  background: palette.$gradient-accent;
-  background-clip: text;
-  color: transparent;
-}
-
-.pink-highlighter {
-  background: rgba(226, 21, 135, 0.2); /* uses $mdn-pink600 as a base */
 }
