--- a/client/src/ui/organisms/deep-dives-feature/index.scss
+++ b/client/src/ui/organisms/deep-dives-feature/index.scss
@@ -1,6 +1,8 @@
 @use "sass:math";
+
 @use "~@mdn/minimalist/sass/vars/layout";
 @use "~@mdn/minimalist/sass/vars/typography";
+
 @use "../../theme/index" as theme;
 
 .deep-dives-feature-wrapper {
@@ -9,23 +11,34 @@
   padding: (layout.$base-spacing * 2) layout.$base-spacing;
   position: relative;
 
-  &::before {
-    background: transparent url("../../atoms/svg/deepdive.svg") center center
-      no-repeat;
-    content: "";
-    display: block;
-    height: calc(85vw * 1.15);
-    margin: -80px auto 0;
-    width: 85vw;
+  .girdle {
+    &::before {
+      background: transparent url("../../atoms/svg/deepdive.svg") center center
+        no-repeat;
+      content: "";
+      display: block;
+      height: 650px;
+      margin: -80px auto 0;
+      width: 560px;
+
+      @media #{layout.$mq-small-desktop-and-up} {
+        position: absolute;
+        right: 0;
+      }
+    }
+  }
+
+  .heading-group,
+  p,
+  ul {
+    @media #{layout.$mq-small-desktop-and-up} {
+      max-width: 45%;
+    }
   }
 
   h1 {
     font-size: typography.$xl-font-size;
     margin: 0;
-
-    @media #{layout.$mq-tablet-and-up} {
-      max-width: 250px;
-    }
   }
 
   h2 {
