updates to desktop layout for mdn overview page

--- a/client/src/deep-dives-homepage/index.scss
+++ b/client/src/deep-dives-homepage/index.scss
@@ -1,4 +1,6 @@
-@import "~@mdn/minimalist/sass/vars/layout";
+@use "sass:math";
+
+@use "~@mdn/minimalist/sass/vars/layout";
 @import "~@mdn/minimalist/sass/vars/typography";
 
 @import "~@mdn/minimalist/sass/mixins/utils";
@@ -6,17 +8,26 @@
 @import "../ui/theme/index";
 
 .page-content-container.deep-dives {
-  margin: $base-spacing 0;
+  margin: layout.$base-spacing 0;
   max-width: initial;
   padding: 0;
 
   .simple-content-container,
   .mdn-history {
-    padding: ($base-spacing * 2) $base-spacing;
+    padding: (layout.$base-spacing * 2) layout.$base-spacing;
   }
 
   .simple-content-container {
-    @include readable-line-length();
+    @media #{layout.$mq-small-desktop-and-up} {
+      display: flex;
+      gap: layout.$base-spacing;
+      justify-content: space-between;
+      padding: (layout.$base-spacing * 4) layout.$base-spacing;
+
+      .content-block {
+        flex: 0 1 45%;
+      }
+    }
   }
 
   .mdn-history {
@@ -25,11 +36,21 @@
 
     dt {
       font-size: $large-font-size;
+
+      @media #{layout.$mq-small-desktop-and-up} {
+        display: inline-block;
+        font-size: $xl-font-size;
+        margin-right: layout.$base-spacing * 2;
+      }
     }
 
     dd {
       font-size: $small-medium-font-size;
       margin-left: 0;
+
+      @media #{layout.$mq-small-desktop-and-up} {
+        display: inline-block;
+      }
     }
   }
 }
